--- a/Sparkify.ipynb
+++ b/Sparkify.ipynb
@@ -1458,28 +1458,436 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f1: 0.6971190518101273\n",
+      "Model Intercept:  -0.9460023143665692\n"
+     ]
+    }
+   ],
    "source": [
     "# Use test set to measure the accuracy of our model on new data\n",
-    "predictions = cvModel.transform(testData)\n",
+    "predictions = cvModel.transform(test)\n",
     "\n",
     "# cvModel uses the best model found from the Cross Validation\n",
     "# Evaluate best model\n",
-    "f1_score = evaluator.evaluate(predict_test)\n",
+    "f1_score = evaluator.evaluate(predictions)\n",
     "print(\"f1: {}\".format(f1_score))\n",
-    "evaluator.evaluate(predictions)\n",
     "\n",
     "print('Model Intercept: ', cvModel.bestModel.intercept)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-----+\n",
+      "|prediction|churn|\n",
+      "+----------+-----+\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "+----------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions.select('prediction', 'churn').show(200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build model\n",
+    "\n",
+    "def classifyModel(classifier, param):\n",
+    "    \n",
+    "    '''\n",
+    "    This function train and test classification model with different classifiers and cross validation\n",
+    "    \n",
+    "    INPUT:\n",
+    "    classifier - classifier (DecisionTree, Random Forest, etc.)\n",
+    "    param - parameter for cross validation\n",
+    "    \n",
+    "    OUTPUT:\n",
+    "    f1 score for performance\n",
+    "    show all records in test set\n",
+    "    \n",
+    "    '''\n",
+    "\n",
+    "    evaluator = MulticlassClassificationEvaluator(predictionCol=\"prediction\", labelCol=\"churn\",metricName='f1')\n",
+    "\n",
+    "    # Create 5-fold CrossValidator\n",
+    "    cv = CrossValidator(estimator=classifier, estimatorParamMaps=paramGrid, evaluator=evaluator, numFolds=5)\n",
+    "\n",
+    "    # Run cross validations\n",
+    "    cvModel = cv.fit(training)\n",
+    "    # this will likely take a fair amount of time because of the amount of models that we're creating and testing\n",
+    "    \n",
+    "    # Use test set to measure the accuracy of our model on new data\n",
+    "    predictions = cvModel.transform(test)\n",
+    "\n",
+    "    # cvModel uses the best model found from the Cross Validation\n",
+    "    # Evaluate best model\n",
+    "    f1_score = evaluator.evaluate(predictions)\n",
+    "    predictions.select('prediction', 'churn').show(200)\n",
+    "    \n",
+    "    print(\"f1: {}\".format(f1_score))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f1: 0.7574205094670803\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create initial Decision Tree Model\n",
+    "dt = DecisionTreeClassifier(labelCol=\"churn\", featuresCol=\"scaledFeatures\", maxDepth=5)\n",
+    "paramDT = (ParamGridBuilder()\n",
+    "             .addGrid(dt.maxDepth, [1, 2, 6, 10])\n",
+    "             .addGrid(dt.maxBins, [20, 40, 80])\n",
+    "             .build())\n",
+    "\n",
+    "classifyModel(dt, paramDT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-----+\n",
+      "|prediction|churn|\n",
+      "+----------+-----+\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       1.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       1.0|    1|\n",
+      "|       1.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       1.0|    1|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    1|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "|       0.0|    0|\n",
+      "+----------+-----+\n",
+      "\n",
+      "f1: 0.7403015663885231\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf = RandomForestClassifier(labelCol=\"churn\", featuresCol=\"scaledFeatures\")\n",
+    "paramRF = (ParamGridBuilder()\n",
+    "             .addGrid(rf.maxDepth, [2, 4, 6])\n",
+    "             .addGrid(rf.maxBins, [20, 60])\n",
+    "             .addGrid(rf.numTrees, [5, 20])\n",
+    "             .build())\n",
+    "\n",
+    "classifyModel(rf,paramRF)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Python 3.6 with Spark",
+   "language": "python3",
+   "name": "python36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1491,7 +1899,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
